# agentwire-dev

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  SECURITY.md  SPONSORS.md  pyproject.toml
.claude/commands/: handoff.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
agentwire/: __init__.py  __main__.py  cli_safety.py  completion.py  config.py  fetch.py  glm_system_prompt.md  init_agentwire.py  listen.py  locking.py  mcp_server.py  notifications.py  onboarding.py  overnight.py  pane_manager.py  project_config.py  projects.py  scheduler.py  search.py  server.py  tasks.py  templating.py  tts_server.py  worktree.py
agentwire/agents/: __init__.py  base.py  sdk.py  tmux.py
agentwire/bridges/: telegram.py
agentwire/channels/: __init__.py  _template.py  base.py  discord.py  email.py  quo.py  slack.py  sms.py  telegram.py  webhook.py
agentwire/commands/: leapfrog-prime.md  leapfrog-prune.md  leapfrog-scout.md
agentwire/handoff/: __init__.py  git_state.py  instructions.py  parser.py  renderer.py  schema.py
agentwire/hooks/: agentwire-permission.sh  idle-handler.sh  suppress-bg-notifications.sh
agentwire/office/: CREDITS.md  LICENSE  package-lock.json  vite.config.ts
agentwire/repl/: __init__.py  app.py  commands.py  context.py  mentions.py  persistence.py  state.py  textual_app.py
agentwire/roles/: __init__.py  agentwire.md  channel-admin.md  chatbot.md  claude-delegation.md  claude-worker-haiku.md  claude-worker-sonnet.md  claude-worker.md  discord-dm.md  glm-delegation.md  glm-worker-flash.md  glm-worker.md  init.md  leader-claude.md  leader-glm.md  leader-openai.md  leader.md  leapfrog.md  notifications.md  openai-delegation.md  openai-worker-mini.md  openai-worker.md  orchestrator.md  slack-dm.md  task-runner.md  voice.md  worker.md
agentwire/safety/: __init__.py  _core.py
agentwire/sdk/: __init__.py  capabilities.py  client.py  damage_control.py  render.py  state.py
agentwire/static/: mobile.html
agentwire/stt/: __init__.py  gpt4o_mini_backend.py  openai_backend.py  router.py  server_backend.py  stt_server.py
agentwire/templates/: desktop.html  email_notification.html  tmux.conf
agentwire/tooldefs/: aws.yaml  docker.yaml  gcp.yaml  gh.yaml  git.yaml  gws.yaml  kubectl.yaml  npm.yaml  terraform.yaml  uv.yaml
agentwire/tts/: base.py  chunker.py
agentwire/workflows/: __init__.py  cli.py  context.py  definitions.py  node.py  outputs.py  pi_runner.py  runner.py  storage.py
docs/: FEATURE-REQUESTS.md  PORTAL.md  SPONSORS.md  TROUBLESHOOTING.md  channels.md  claude-code-auto-mode.md  demo-script.md  gws-google-workspace-cli.md  notification-hooks.md  pi-zai.md  releasing.md  remote-machines.md  repl-tui.md  scheduled-workloads.md  tts-self-hosted.md  workflows.md  youtube-channel.md
docs/agentwire-research/: oh-my-opencode-slim.md  opencode-background-agents.md  opencode-swarm-plugin.md
docs/brainstorms/: idea-agent-hot-swap.md  idea-ambient-context-stream.md  idea-ambient-listening-mode.md  idea-checkpoint-commits.md  idea-context-window-gauge.md  idea-cost-tracking-dashboard.md  idea-cross-session-events.md  idea-delegation-replay.md  idea-device-session-tethering.md  idea-notification-escalation.md  idea-periodic-voice-briefings.md  idea-session-drift-detection.md  idea-session-energy-model.md  idea-session-handshake.md  idea-session-momentum.md  idea-session-replay.md  idea-session-templates.md  idea-session-thermal-throttling.md  idea-smart-session-routing.md  idea-spatial-voice-mixing.md  (+15 more)
opencode-plugin/: agentwire-notify.ts
scripts/: benchmark-models.sh  queue-processor.sh  regen_damage_control_hooks.py
tests/: conftest.py
(+275 files in other folders)
